--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,3 +1,3 @@
 .container {
-  background: linear-gradient(45deg, red, green);
+  background: linear-gradient(45deg, var(--purple), var(--lightYellow));
 }
