--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,3 +1,8 @@
-.container {
-  background: linear-gradient(45deg, var(--purple), var(--lightYellow));
+body{
+  margin:0;
 }
+html{
+    background: linear-gradient(45deg, var(--purple), var(--lightYellow));
+  height: 100%;
+}
+
