--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -19,6 +19,7 @@ html {
   grid-gap: var(--spacing-medium);
   grid-template-columns: repeat(auto-fill, 200px);
   justify-content: center;
+  margin-bottom: 2rem;
 }
 
 .searchbar-container{
