--- a/client/src/components/atoms/Header/Header.css
+++ b/client/src/components/atoms/Header/Header.css
@@ -1,3 +1,15 @@
 .header-container {
   margin-bottom: var(--spacing-xlarge);
 }
+
+
+@media screen and (max-width: 70.75rem){
+  .header-container > img {
+    transform: scale(0.75);
+  }
+  
+  .header-container {
+    display: flex;
+    justify-content: center;
+  }
+}
