--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -65,6 +65,14 @@ html {
   gap: 16px;
   justify-content: center;
   align-items: center;
+} 
+
+.error-container {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  justify-content: center;
+  align-items: center;
 }
 
 .loader {
