Add gifRepository and apiGifRepository

--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -93,6 +93,10 @@ html {
   animation: pulse 0.4s 0.3s alternate infinite ease-in-out;
 }
 
+.error-container{
+  border-radius: 1rem;
+}
+
 @keyframes pulse {
   to {
     transform: scale(0.8);
